# FastBreak

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_batch.cpp  bench_pool.cpp  bench_rx.cpp  bench_spsc.cpp  final_benchmark.cpp
docker/: Dockerfile  build.sh
docs/: ARCHITECTURE.md
include/: batch_processor.h  buffer_pool.h  huge_alloc.h  numa_util.h  packet_parser.h  packet_ring.h  perf_counters.h  rdtsc.h  rss_distributor.h  spsc_ring.h  tcp_lite.h  worker_pool.h
src/: batch_processor.cpp  buffer_pool.cpp  capture.cpp  huge_alloc.cpp  multiqueue_capture.cpp  numa_util.cpp  packet_ring.cpp  perf_counters.cpp  rss_distributor.cpp  tcp_lite.cpp  worker_pool.cpp
tests/: test_huge_alloc.cpp  test_rss.cpp  test_spsc.cpp  test_tcp_lite.cpp
tools/: numa_info.cpp  perf_baseline.cpp  pkt_gen.cpp
